tests/typechecker/should_fail/parser_let_nametype_defined.csp
P = let
		nametype Blah = {0..1}
	within 2
